--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -10,7 +10,7 @@
         <a class="btn btn-default btn-lg" routerLink="/createpoll">
             Start Hangout Poll
         </a>
-        
+
         <h1 class="or">or</h1>
         <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
             Get Your Active Polls
@@ -32,11 +32,11 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-success">Send</button>
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Send</button>
                     </div>
                 </div>
             </div>
         </div>
-        
+
     </div><!-- end tabs -->
 </div>
