--- a/public/app/components/confirmation/confirmation.html
+++ b/public/app/components/confirmation/confirmation.html
@@ -63,7 +63,7 @@
 
                     <div class="col-md-7">
 
-                        <a class="btn btn-primary btn-block btn-group-sm" data-toggle="modal" data-target="#myModal" onclick="submit()">
+                        <a class="btn btn-primary btn-block btn-group-sm" data-toggle="modal" data-target="#myModal" (click)="submit()">
                             SUBMIT
                         </a>
                         <a class="btn btn-primary btn-block btn-group-sm" onclick="history.back()">
