--- a/public/app/components/confirmation/confirmation.html
+++ b/public/app/components/confirmation/confirmation.html
@@ -55,7 +55,7 @@
                     <div class="col-md-7">
 
                         <a class="btn btn-primary btn-block btn-group-sm" (click)="submit()" data-toggle="modal" data-target="#myModal">
-                            SUBMIT
+                            Confirm
                         </a>
                     </div>
 
