--- a/public/app/components/create-event-poll-form/create-event-poll-form.component.html
+++ b/public/app/components/create-event-poll-form/create-event-poll-form.component.html
@@ -20,7 +20,7 @@
                         <input  id="creator_email"
                                 name="creator_email"
                                 class="form-control"
-                                [(ngModel)]="event.creator.email"
+                                [(ngModel)]="creatorEmail"
                                 #creator_email="ngModel"
                                 required
                                 pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$">
