--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" *ngIf="request_email.valid"
-                        class="btn btn-primary btn-lg btn-block" (click)="submit()" data-dismiss="modal">Submit</button>
+                        class="btn btn-primary btn-lg btn-block" (click)="submit()" data-dismiss="modal" data-target="#myModal">Submit</button>
                         <button type="button" *ngIf="request_email.invalid"
                         class="btn btn-primary btn-lg btn-block" disabled>Submit</button>
                     </div>
