/createPoll and /email are working!

--- a/public/app/components/confirmation/confirmation.html
+++ b/public/app/components/confirmation/confirmation.html
@@ -26,7 +26,7 @@
                         </label>
                         <br/>
                         <label>
-                            Deadline:  {{event.pollDeadline}}
+                            Deadline:  {{event.deadline}}
                         </label>
                         <br/>
                     </div>
