--- a/public/app/components/create-event-poll-form/create-event-poll-form.component.html
+++ b/public/app/components/create-event-poll-form/create-event-poll-form.component.html
@@ -57,7 +57,7 @@
                         </label>
                         <input  id="event_deadline"
                                 class="form-control"
-                                [(ngModel)]="pollDeadline" />
+                                [(ngModel)]="deadline" />
                         <!--<datetime [(ngModel)]="event.deadline"></datetime>-->
                     </div>
 
