--- a/public/app/components/poll-results-form/poll-results-form.component.html
+++ b/public/app/components/poll-results-form/poll-results-form.component.html
@@ -48,10 +48,10 @@
             </div>
         </div>
 
-        <div class="col-md-7">
+        <!-- <div class="col-md-7">
             <a class="btn btn-primary btn-block btn-lg" (click)="submit()">
                 Send Invites
             </a>
-        </div>
+        </div> -->
     </div>
 </div>
