--- a/public/app/components/confirmation/confirmation.css
+++ b/public/app/components/confirmation/confirmation.css
@@ -1,6 +1,10 @@
-.confirmation {
-
-}
 #center{
      text-align: center;
+}
+h3,h4 {
+    color: #08617a;
+}
+
+.submitBtn {
+    padding-bottom: 50px;
 }
