--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -121,10 +121,10 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" *ngIf="request_email.valid"
-                            class="btn btn-primary btn-lg btn-block" (click)="submit()" data-dismiss="modal">Submit</button>
+                            <button type="button"
+                            class="btn btn-primary btn-lg btn-block" (click)="submit()" data-dismiss="modal" [disabled]="!request_email.valid">Submit</button>
                             <button type="button" *ngIf="request_email.invalid"
-                            class="btn btn-primary btn-lg btn-block" disabled>Submit</button>
+                            <!-- class="btn btn-primary btn-lg btn-block" disabled>Submit</button> -->
                         </div>
                     </div>
                 </div>
